unpackaged/main/default/objects/csmrgp__User_Preferences__c/csmrgp__User_Preferences__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Maintains app and user preferences for Case Merge Premium</description>
    <label>Case Merge Preferences</label>
</CustomObject>