unpackaged/main/default/objects/csmrgp__User_Preferences__c/fields/csmrgp__Automerged_Case_Status__c.field-meta.xml
<CustomField>
    <fullName>csmrgp__Automerged_Case_Status__c</fullName>
    <label>Automerged Case Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>