unpackaged/main/default/objects/csmrgp__User_Preferences__c/fields/csmrgp__Bypass_Sharing__c.field-meta.xml
<CustomField>
    <fullName>csmrgp__Bypass_Sharing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Extend Record Access</label>
    <type>Checkbox</type>
</CustomField>