unpackaged/main/default/objects/csmrgp__User_Preferences__c/fields/csmrgp__Case_Merge_Limit__c.field-meta.xml
<CustomField>
    <fullName>csmrgp__Case_Merge_Limit__c</fullName>
    <label>Case Merge Limit</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>