unpackaged/main/default/objects/csmrgp__User_Preferences__c/fields/csmrgp__Certificate_Name__c.field-meta.xml
<CustomField>
    <fullName>csmrgp__Certificate_Name__c</fullName>
    <description>Unique name of connected app certificate.</description>
    <label>Certificate Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>