unpackaged/main/default/objects/csmrgp__User_Preferences__c/fields/csmrgp__Clean_Merge__c.field-meta.xml
<CustomField>
    <fullName>csmrgp__Clean_Merge__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Clean Merge</label>
    <type>Checkbox</type>
</CustomField>