unpackaged/main/default/objects/csmrgp__User_Preferences__c/fields/csmrgp__Connected_App_Name__c.field-meta.xml
<CustomField>
    <fullName>csmrgp__Connected_App_Name__c</fullName>
    <description>Unique name of connected app.</description>
    <label>Connected App Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>