unpackaged/main/default/objects/csmrgp__User_Preferences__c/fields/csmrgp__Disable_Attachment_Trigger__c.field-meta.xml
<CustomField>
    <fullName>csmrgp__Disable_Attachment_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable Attachment Trigger</label>
    <type>Checkbox</type>
</CustomField>