unpackaged/main/default/objects/csmrgp__User_Preferences__c/fields/csmrgp__Disable_Content_Document_Link_Trigger__c.field-meta.xml
<CustomField>
    <fullName>csmrgp__Disable_Content_Document_Link_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable Content Document Link Trigger</label>
    <type>Checkbox</type>
</CustomField>