unpackaged/main/default/objects/csmrgp__User_Preferences__c/fields/csmrgp__Disable_Email_Message_Trigger__c.field-meta.xml
<CustomField>
    <fullName>csmrgp__Disable_Email_Message_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable Email Message Trigger</label>
    <type>Checkbox</type>
</CustomField>