unpackaged/main/default/objects/csmrgp__User_Preferences__c/fields/csmrgp__Exceed_Merge_Limit__c.field-meta.xml
<CustomField>
    <fullName>csmrgp__Exceed_Merge_Limit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exceed Merge Limit</label>
    <type>Checkbox</type>
</CustomField>