unpackaged/main/default/objects/csmrgp__User_Preferences__c/fields/csmrgp__Hit_List_Component_View__c.field-meta.xml
<CustomField>
    <fullName>csmrgp__Hit_List_Component_View__c</fullName>
    <description>The type of cases preferred by the user when using the Duplicate Case Utility Bar component.</description>
    <label>Hit List Component View</label>
    <length>100</length>
    <type>Text</type>
</CustomField>