unpackaged/main/default/objects/csmrgp__User_Preferences__c/fields/csmrgp__Merge_Body_as_Comment__c.field-meta.xml
<CustomField>
    <fullName>csmrgp__Merge_Body_as_Comment__c</fullName>
    <label>Merge Body as Comment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>