unpackaged/main/default/objects/csmrgp__User_Preferences__c/fields/csmrgp__Send_Case_Ownership_Notifications__c.field-meta.xml
<CustomField>
    <fullName>csmrgp__Send_Case_Ownership_Notifications__c</fullName>
    <label>Send Case Ownership Notifications</label>
    <length>255</length>
    <type>Text</type>
</CustomField>